[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/UserInterface.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 722.074, 71.1708 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 89.1864, 22.3644 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 179.186, 328.364 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="UserInterface" type="CanvasLayer" parent="."]
layer = 100

[node name="UserInterface" parent="UserInterface" instance=ExtResource( 2 )]

[node name="Ground" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Ground"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D"]
position = Vector2( 921.236, 907.395 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground/StaticBody2D"]
position = Vector2( 1281.45, 682.481 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ground/StaticBody2D"]
position = Vector2( 1263.97, 489.485 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Ground/StaticBody2D"]
position = Vector2( 1231.5, 287.505 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Ground/StaticBody2D"]
position = Vector2( 1379.52, 507.48 )
shape = SubResource( 3 )

[node name="SpawnLoc0" type="Position2D" parent="."]
position = Vector2( 708.699, 425.519 )

[node name="SpawnLoc1" type="Position2D" parent="."]
position = Vector2( 949.926, 422.522 )
[connection signal="reset" from="UserInterface/UserInterface" to="." method="reset_signal_handler"]
